# yove

./: Cargo.toml  README.md
crates/riscv-cpu/: Cargo.toml
crates/riscv-cpu/riscv-tests/isa/: rv32ua-p-amoadd_w  rv32ua-p-amoand_w  rv32ua-p-amomax_w  rv32ua-p-amomaxu_w  rv32ua-p-amomin_w  rv32ua-p-amominu_w  rv32ua-p-amoor_w  rv32ua-p-amoswap_w  rv32ua-p-amoxor_w  rv32ua-p-lrsc  rv32uc-p-rvc  rv32ui-p-add  rv32ui-p-addi  rv32ui-p-and  rv32ui-p-andi  rv32ui-p-auipc  rv32ui-p-beq  rv32ui-p-bge  rv32ui-p-bgeu  rv32ui-p-blt  rv32ui-p-bltu  rv32ui-p-bne  rv32ui-p-fence_i  rv32ui-p-jal  rv32ui-p-jalr  rv32ui-p-lb  rv32ui-p-lbu  rv32ui-p-lh  rv32ui-p-lhu  rv32ui-p-lui  rv32ui-p-lw  rv32ui-p-ma_data  rv32ui-p-or  rv32ui-p-ori  rv32ui-p-sb  rv32ui-p-sh  rv32ui-p-simple  rv32ui-p-sll  rv32ui-p-slli  rv32ui-p-slt  (+19 more)
crates/riscv-cpu/src/: cpu.rs  lib.rs  memory.rs  mmu.rs  mod.rs
crates/riscv-cpu/src/cpu/: instructions.rs  memory.rs  tests.rs
crates/riscv-cpu/src/cpu/tests/: memory.rs
src/: main.rs  xous.rs
src/riscv/: bus.rs  cpu.rs  exception.rs  memory.rs  mmu.rs  mod.rs
src/xous/: definitions.rs  services.rs  syscalls.rs
src/xous/definitions/: memoryflags.rs
src/xous/services/: dns.rs  log.rs  name.rs  panic_to_screen.rs  ticktimer.rs
